# Roman-Chebba-agriculture

./: .gitignore  Annex_site_forms.docx  Chebba_Roman_agronomic_model.docx  Complete_dataset.xlsx  Instruccions per al model agronomic Roma de Chebba.docx  chebba_polygon.lyrx  pyproject.toml
ABM/: app.py  model.py  parameters.yaml  preprocess.ipynb  test_gompertz.ipynb  voronoi.ipynb
ABM/agents/: farm_agent.py  field_agent.py  villa_agent.py
ABM/input_data/: chebba_clipped.dbf  chebba_clipped.shp  chebba_clipped.shx  regular_grid.pkl  regular_grid_with_voronoi.pkl  sites.csv  sites_voronoi.csv  voronoi_regions.dbf  voronoi_regions.shp  voronoi_regions.shx
ABM/raw_data/: Complete_dataset_ML.xlsx  chebba__polygon.shp  chebba__polygon.shx  non-chebba sites areas.xls  non_chebba_sites_areas.txt  non_chebba_sites_areas.xlsx
data/: Complete_dataset.xlsx  Settlement_types.xlsx
data/processed/: combined_probable_sites_processed.xlsx  combined_sites_processed.xlsx  other_sites_processed.csv  other_sites_processed.xlsx
proves/: capitals_comarca.csv  divisions-administratives-v2r2-caps-municipi-20260120.csv  proves.ipynb
roman_chebba_agriculture.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
roman_villa_finder/: gradient_boosting_model.py  logistic model.py  utils.py
roman_villa_finder/models/: combined_probable_trained_model.joblib  combined_trained_model.joblib  other_trained_model.joblib
roman_villa_finder/outputs/: predicted_sites.xlsx  predicted_sites_corrected.xlsx
roman_ville_finder/: logistic model.py  train_model.py
utils/: preprocess.ipynb
(+1 files in other folders)
