[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roman-chebba-agriculture"
version = "0.1.0"
description = "Agriculture data analysis and preprocessing project"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["agriculture", "data-analysis", "preprocessing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "ipykernel>=6.31.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.9.4",
    "numpy>=1.21.0",
    "openpyxl>=3.1.5",
    "pandas>=1.3.0",
    "scikit-learn>=1.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "ruff>=0.1.0",
    "mypy>=0.990",
]
jupyter = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
    "notebook>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v"
